2017-06-04	test-orly-wut now works on ia16-elf.

		include/innocent-pear/kthxbai.h ,
		include/innocent-pear/lolwut.h ,
		include/innocent-pear/omg.h ,
		include/innocent-pear/orly.h ,
		include/innocent-pear/unpossible.h :
		- changed "g" and "=g" assembly operand constraints into "r,m"
		  and "=r,m", to work around an ia16-elf-gcc issue

2017-06-01	"Toddlers are the stormtroopers of the Lord of Entropy."

		include/innocent-pear/rofl.h :
		- x86-64/-32/-16: rofl<...>::memset(.) now marks %rdi/%edi/%di
		  and %rcx/%ecx/%cx as early-clobber

		share/innocent-pear/doge-02.cc :
		- quick and messy fix for ia16-elf linker problem

2017-05-31	orly<...>::wut(...) was broken on ia16-elf.

		GNUmakefile :
		- added test-orly-wut to list of tests, and customized
		  commands for building test-orly-wut, for ia16-elf

		include/innocent-pear/orly.h :
		- orly<...> now uses machine-independent definition of
		  WhichOp (argh!)
		- fixed another silly bug: y <= sizeof(.) should be sizeof(y)
		  <= sizeof(.)

		include/innocent-pear/host/srsly.h :
		- srsly<...> now uses machine-independent definition of
		  which_op_

		test/test-orly-wut.cc :
		- modified to (semi-)work under ia16-elf

2017-05-30	ia16-elf constructors and unscrambling loop hacking...

		share/innocent-pear/doge-i-ctors.ld :
		- new; turns .ctors.* into .init_array.* for ia16-elf

		share/innocent-pear/doge-00.cc :
		- added .init_array.* constructor loop for ia16-elf

		share/innocent-pear/doge-40.cc :
		- minor fix

		GNUmakefile :
		- added doge-i-ctors.ld to dependencies
		- now blasts the link map to stdout (for debugging), when
		  compiling test-doge-with-c test case for ia16-elf

		bin/innocent-pear-front-end.tcc :
		- now names temporary object files for doge-??.cc with their
		  ?? tag numbers, for easier debugging
		- now uses doge-i-ctors.ld

		include/innocent-pear/orly.h :
		- removed munging of p, and fixed munging of q, in orly<...>::
		  wot(p, q, c) and orly<...>::wut(p, q, r)
